src/test/deca/context/valid/provided/affectation_float_int.deca
/*/ Description:
//    Affectation et typage d'un float vers un int
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2022*/

{
   float a;
   int b = 2;
   a = b;
}
