src/test/deca/context/invalid/provided/mult_incompatible2.deca
/*/ Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 16: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2022*/

{
   int a;
   int b;
   

   /* Doit etre refuse.*/
   a = b*"toto";
}
